<resources>
    <string name="app_name">City Guild</string>
    <string name="powered_by">Powered By Certified Vic</string>


    <!--    string for onboarding-->

    <string name="first_slide_title">Search Your Location</string>
    <string name="second_slide_title">Make A Call</string>
    <string name="third_slide_title">Add Missing Places</string>
    <string name="fourth_slide_title">Sit Back And Enjoy</string>

    <!--    description-->
    <string name="first_slide_desc">You can search any place nearby or with-in the specified city. We will display specific or all related shops to match your search. </string>
    <string name="second_slide_desc">We provide almost all the numbers of all departments and shops registered with us. You can perform bookings as well.</string>
    <string name="third_slide_desc">If you have a shop or somethings and want to be a part of our growing industry then add your place by follwing simple steps.</string>
    <string name="fourth_slide_desc">We will handle everything for you. As you have the app in your pocket then you don\'t have to worry about anything.  </string>

    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>


    <!--    Strings For Dashboard-->

    <!--    categories_card_design -->
    <string name="hotels">Hotels</string>
    <string name="banks">Banks</string>
    <string name="restaurants">Restaurants</string>
    <string name="shops">Shops</string>
    <string name="airports">Airports</string>

    <!--    titles and descriptions-->
    <string name="featured_locations">All Featured Locations</string>
    <string name="featured_locations_description">All The Locations are featured and are Top on List</string>
    <string name="most_viewed_locations">Most Viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search ...</string>


    <!--    for the drawer menu-->
    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="all_categories">All Categories</string>
    <string name="add_missing_place">Add Missing Place</string>
    <string name="nav_login">Log In</string>
    <string name="nav_logout">Log Out</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_share">Share</string>
    <string name="nav_rate_us">Rate Us</string>


    <!--    for categories-->
    <string name="car_rent">Car Rent</string>
    <string name="expand_all">Expand All</string>
    <string name="eatery">Eatery</string>
    <string name="banking">Banking</string>
    <string name="shopping">Shopping</string>

    <!--    ToDo Sign Up  Screen Details-->
    <string name="signup">Sign Up</string>
    <string name="login">Log In</string>
    <string name="retailer_heading">Grow\nYour Business</string>
    <string name="retailer_tag_line">We will help you to grow your business using Online Services </string>
    <string name="create_account">Create\nAccount</string>
    <string name="how_we_work">How We Work?</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password</string>

    <!--    Login Screen Details-->
    <string name="enter_username">Enter UserName</string>
    <string name="enter_password">Enter Password</string>
    <string name="remember_password">Remember Password</string>
    <string name="forgot_password">Forgot Password?</string>


    <!--    sign up details-->


    <string name="signup_create_account">Create Account</string>
    <string name="enter_full_name">Full Name</string>
    <string name="enter_email">Email</string>
    <string name="enter_phone_number">Phone Number</string>
    <string name="signup_next_btn">Next</string>


    <!--    otp screen details-->

    <string name="otp_code_text">Co\nde</string>
    <string name="otp_verification_text">Verification</string>
    <string name="otp_description_text">Enter A One Time Password</string>

    <!--    forget password-->


    <string name="forget_password_detail">Provide Your Accounts Phone Number For Which You Want To Reset Your Password</string>


    <!--    make selection-->

    <string name="make_selection">Make Selection</string>
    <string name="make_selection_detail">Select Which Contact Detail You Should Use To Reset Your Password</string>
    <string name="via_sms">Via SMS</string>
    <string name="via_email">Via MAIL</string>


    <!--    set new password-->

    <string name="new_credentials">New Credentials</string>
    <string name="new_credentials_detail">Your Identity Has Been Verified! Set Your New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_updated">Password Updated</string>
    <string name="password_updated_success">Your Password Has Been Updated</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>