<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignup.RetailerStartUpScreen"
    android:background="@color/banner_background_light"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/delivery"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/muli_black"
            android:gravity="center"
            android:text="@string/retailer_heading"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textAllCaps="true"
            android:layout_marginTop="80dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/muli_extralight"
            android:gravity="center"
            android:text="@string/retailer_tag_line"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textAllCaps="true"
            android:padding="10dp"/>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:background="@color/colorPrimary"
                android:textColor="@color/black"
                android:id="@+id/login_btn"
                android:onClick="callLoginScreen"
                android:transitionName="transition_login"/>



            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:background="@color/colorPrimary"
                android:textColor="@color/black"
                android:id="@+id/signup_btn"
                />




        </LinearLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/how_we_work"
            android:background="#00000000"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"/>

    </LinearLayout>

</ScrollView>